--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ thiserror = "1.0"
 eqsolver = "0.3.0"
 pyo3 = "0.25.0"
 numpy = "0.25.0"
+rayon = "1.10.0"
+csv = "1.3.1"
+rand = "0.9.1"
 
 [lib]
 name = "dustreverb"
